--- a/client/src/index.css
+++ b/client/src/index.css
@@ -94,12 +94,16 @@ code {
 }
 
 /* style for sidebar */
-.sidebar{
-  height: 100vh;
-  position: fixed;
+.bgColor{
+  background-color: #f8f9fa;
 }
 
 /* styel for cursor pointer */
 .c-pointer{
   cursor: pointer;
+}
+
+.pf{
+  position: fixed;
+  height: 50vh;
 }
